# terra-incognita

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
crates/terra-core/: Cargo.toml
crates/terra-core/examples/: elevation_diagnostic.rs  entropy_check.rs  plate_diagnostic.rs
crates/terra-core/src/: coords.rs  generator.rs  heightfield.rs  lib.rs  sphere.rs
crates/terra-core/src/climate/: glaciation.rs  latitude_bands.rs  map_noise.rs  mod.rs  orographic.rs  seasonality.rs
crates/terra-core/src/hydraulic/: basins.rs  flow_routing.rs  glacial.rs  mass_wasting.rs  mod.rs  stream_network.rs  stream_power.rs
crates/terra-core/src/metrics/: aspect.rs  drainage.rs  geomorphons.rs  gradient.rs  hurst.rs  hypsometric.rs  mod.rs  morans.rs  multifractal.rs  roughness_elev.rs  score.rs  slope.rs  tpi.rs
crates/terra-core/src/noise/: anisotropic.rs  fbm.rs  hypsometric_shape.rs  mod.rs  multifractal.rs  nonstationary.rs  params.rs  warp.rs
crates/terra-core/src/planet/: field_smoothing.rs  mod.rs  planet_elevation.rs  planet_metrics.rs  sea_level.rs
crates/terra-core/src/plates/: age_field.rs  boundary_curves.rs  continent_placement.rs  continents.rs  erodibility_field.rs  grain_field.rs  mod.rs  plate_dynamics.rs  plate_generation.rs  regime_field.rs  ridges.rs  subduction.rs
crates/terra-test/: Cargo.toml
crates/terra-test/src/: main.rs
crates/terra-wasm/: Cargo.toml
crates/terra-wasm/src/: lib.rs
data/: checksums.txt  download.sh  regions.json  sources.md
data/targets/: Alpine.json  Coastal.json  Cratonic.json  FluvialArid.json  FluvialHumid.json  notes.md
data/targets/structural/: Alpine.json  Coastal.json  Cratonic.json  FluvialArid.json  FluvialHumid.json  calibration.json  distributions.json
docs/: 01_project_overview.docx  02_design_bible.docx  03_roadmap.docx  04_claude_code_reference.docx  DEV_NOTES.md  cleanup-prompt.md  isostatic-elevation-prompt.md  range-merging-prompt.md  ridge-separation-analysis.md  structural-analyzer-spec.md
docs/internal/: cleanup-prompt.md  debt-report.md  isostatic-elevation-prompt.md  range-merging-prompt.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: export.ts  globe_renderer.ts  interaction.ts  main.ts  planet_renderer.ts  render.ts
frontend/src/ui/: detail_panel.ts  planet_score.ts  score_panel.ts  sliders.ts
frontend/src/workers/: tile_worker.ts
tools/classifier/: Cargo.toml
tools/classifier/src/: main.rs
tools/distributions/: Cargo.toml
tools/distributions/src/: main.rs
tools/sampler/: Cargo.toml
tools/sampler/src/: main.rs
tools/structural_analyzer/: Cargo.toml
tools/structural_analyzer/src/: asymmetry.rs  branching.rs  components.rs  flat_patches.rs  grain.rs  main.rs  morphology.rs  profiles.rs  ridge_continuity.rs  ridge_spacing.rs  ridge_systems.rs  transects.rs  valley_width.rs  watershed.rs
tools/validate_targets/: Cargo.toml
tools/validate_targets/src/: main.rs
tools/visualize/: Cargo.toml
tools/visualize/src/: main.rs
