[workspace]
resolver = "2"
members = [
    "crates/terra-core",
    "crates/terra-wasm",
    "crates/terra-test",
    "tools/sampler",
    "tools/classifier",
    "tools/distributions",
    "tools/validate_targets",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Terra Incognita Contributors"]
license = "MIT"

[workspace.dependencies]
terra-core = { path = "crates/terra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1"
noise = "0.9"
anyhow = "1"
thiserror = "2"
