[package]
name = "terra-core"
version.workspace = true
edition.workspace = true

[features]
default = []
simd = []
threading = ["rayon"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
noise = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
