[package]
name = "classifier"
version.workspace = true
edition.workspace = true

[[bin]]
name = "classifier"
path = "src/main.rs"

[dependencies]
terra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tiff = "0.9"   # pure-Rust TIFF decoder for Köppen nearest-neighbour sampling
