[package]
name = "structural_analyzer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "structural_analyzer"
path = "src/main.rs"

[dependencies]
terra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
